fixed some scroll issues. Added scrollbars back in (for now)

--- a/soci.styl
+++ b/soci.styl
@@ -100,6 +100,7 @@ body
 #tags
   scroll-snap-type: x proximity;
   scroll-padding: 16px;
+  padding-top: 16px;
   soci-column
     transform: translateY(10px)
     opacity: 0
